# ProjectA

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
A/: CMakeLists.txt
A/src/: A.cpp  A.hpp  Application.cpp  Application.hpp  Color.hpp  Event.cpp  Event.hpp  Image.hpp  Init.cpp  Init.hpp  Keycode.hpp  Keycode_new.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Renderer.cpp  Renderer.hpp  Rendering.hpp  Scopes.hpp  StaticWindowHandler.cpp  StaticWindowHandler.hpp  Window.cpp  Window.hpp  WindowHandler.cpp  WindowHandler.hpp  main.cpp
A/src/Graphics/: BaseRenderer.hpp  OpenGLRenderer.hpp  Rendering.cpp  Rendering.hpp  VulkanRenderer.hpp
A/src/old/: GraphicsContext.cpp  GraphicsContext.hpp  Keycode.hpp  Renderer.cpp  Renderer.hpp  SDL_RendererGraphicsContext.cpp  SDL_RendererGraphicsContext.hpp  main.cpp
X/: CMakeLists.txt
X/src/: main.cpp
